--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,18 +5,26 @@
 }
 
 .navbar {
-  width: 100%;
+  /* width: 100%;
+  background: #0e0f0f;
+  position: sticky;
+  top: 0;
+  z-index: 1000; */
+   width: 100vw; /* Use viewport width instead */
   background: #0e0f0f;
   position: sticky;
   top: 0;
   z-index: 1000;
+  margin-left: calc(-50vw + 50%); /* Pull it to true edge */
+  margin-right: calc(-50vw + 50%);
   
+
 }
 
 .nav-container {
   max-width: 1200px;
-  margin: auto;
-  padding: 18px 100px;
+  margin: 0 auto;
+  padding: 18px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -78,6 +86,18 @@
   background: #e5e7eb;
   transition: all 0.3s ease;
 }
+
+.hamburger.open span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.hamburger.open span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -7px);
+}
+/*Remove-Item -Recurse -Force node_modules
+Remove-Item -Force package-lock.json
 
 /* Mobile */
 @media (max-width: 768px) {
