feat: added the homepage and property page, added styles folder with css files, installed Lucid-react

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+/* ****************PROPERTIES PAGE**************** */
+
+.propeties-main {
+  background: #f8fafc;
+  max-width: 1200px;
+  margin: 0 -200px;
+  padding: 2rem;
+}
