--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   position: sticky;
   top: 0;
   z-index: 1000; */
-   width: 100vw; /* Use viewport width instead */
+   width: 100%; /* Use viewport width instead */
   background: #0e0f0f;
   position: sticky;
   top: 0;
